# construcao-pipelines

./: .dockerignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pipeline.yaml
calculadora_web/: app.py
calculadora_web/templates/: index.html
e2e/: test_calculadora_playwright.py
tests/unit/: test_app.py
